--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -48,7 +48,7 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
           - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image, required: false}
+          - {label: Image, name: image, widget: image}
 
       - file: "src/pages/about/index.md"
         label: "About"
